--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-redux-starter-kit",
+  "name": "ops-io",
   "version": "1.0.0",
-  "description": "Get started with React, Redux, and React-Router!",
+  "description": "Workflow tool for deployment of applications.",
   "main": "index.js",
   "engines": {
     "node": ">=4.2.0",
